Add day 1 solutions (2024)