@@ -7,6 +7,8 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
+    <argLine>--enable-preview</argLine>
+    <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
     <maven.compiler.release>24</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
